--- a/weathercs.css
+++ b/weathercs.css
@@ -17,16 +17,6 @@ body
 }
 
 /*--------------------------------------*/
-@media (min-width: 769px){
-.container-fluid1
-{
-    width: 40%;
-    margin-left: auto; 
-    margin-right: 0;
-    margin-top: 20px;
-    margin-right: 20px;
-
-}}
 
 @media (max-width: 768px) {
 
@@ -39,7 +29,7 @@ body
     font-family: 'Trebuchet MS', sans-serif;
     font-size: 45px;
     color: white;
-    margin: 60px 0 0 30px;
+    margin: 30px 0 0 30px;
 }
 
 
@@ -49,7 +39,7 @@ body
     position: right;
     margin-left: auto; 
     margin-right: 0;
-    margin-top: 60px;
+    margin-top: 30px;
     margin-right: 10px;
 
 }
@@ -120,7 +110,7 @@ body
   width: 80%;
   transition: all 0.5s;
   cursor: pointer;
-  margin: 10px 0px 0 0;
+  margin: 30px 0px 0 0;
 }
 .button2:hover {
     background-color: #b9b9b9;
@@ -186,83 +176,275 @@ body
 .day{
     margin-left: 15px;
     font-size: 22px;
-    background-color: rgb(56, 56, 56);
+    background-color: rgba(0, 255, 255, 0.5);
+    border-radius: 5px;
     width: 70%;
 }
-
-}
-
-
-
-
-
-
-
-
-/*
-.container-fluid2
-{
-    width: 600px;
-    margin: 20px 10px 20px;
-    padding: 10px;
+.newhead{
+    font-family: 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 22px;
+    padding: 5px;
+    border: none;
+    color: white;
+    text-align: center;
     
 }
+.weather-forecast-item1{
+    margin: 6px 0px 0 0px;
+    padding-left: 10px;
+    width: 40%;
+    font-family: 'Trebuchet MS', sans-serif;
+    
+    background-color: rgba(0, 255, 255, 0.5);
+    font-weight: bold;
+    font-size: 14px;
+    
+    
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+    
+   
+    text-align: left;
+}
+.others{
+    margin-top: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    padding-left: 5px;
+    color: white;
+    font-family: 'Trebuchet MS', sans-serif;
+    
+    margin-left: 5px;
+    width: 60%;
+}
+
+.presentd{
+    border-radius: 5px;
+    height: 90px;
+    width: 60%;
+    margin-left: 7px;
+    display: flex;
+    background: rgba(24,24,27,0.6);
+}
+}
 
 
-.inputs1
-{   width: 400px;
-    margin: 20px 10px 20px;
-    padding: 10px;
+@media (min-width: 769px){
+
+    .topcont{
+    display: flex;
+}
+
+.tadcont{
+    width: 30%;
+    font-family: 'Trebuchet MS', sans-serif;
+    font-size: 45px;
+    color: white;
+    margin: 30px 0 0 30px;
+}
+
+
+    .container-fluid1 
+{
+    width: 35%;
+    position: right;
+    margin-left: auto; 
+    margin-right: 0;
+    margin-top: 30px;
+    margin-right: 10px;
+
+}
+
+.inputs 
+{
     padding: 2rem 0 2rem 0;
+    width: 100%;
     text-align: center;
     justify-content: center;
     background: rgba(24,24,27,0.6);
-    border-radius: 25px;
+    border-radius: 10px;
+}
+.inputs input[type="text"] 
+{
+    height: 4rem;
+    width: 80%;
+    font-family: 'Trebuchet MS', sans-serif;
+    background: #212121;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px;
+    border: none;
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+    border: 2px solid #c2c2c2;
+    border-radius: 2px;
+    
 }
 
+#cityinput::placeholder {
+    font-size: 15px;
+    color: rgb(255, 255, 255);
+  }
 
-
-.display 
+.inputs input[type="submit"] 
 {
-    text-align: center;
-    width: 400px;
+  background-color: #dadada;
+  font-family: 'Trebuchet MS', sans-serif;
+  display: inline-block;
+  border-radius: 8px;
+  border: none;
+  color: black;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px;
+  width: 80%;
+  transition: all 0.5s;
+  cursor: pointer;
+  
+}
+.inputs input[type="submit"]:hover {
     background-color: #b9b9b9;
 }
-.wrapper 
-{
-    margin: 0 9rem;
-    background: rgba(24,24,27,0.6);
-    border-radius: 25px;
-    height: 45vh;
-    margin: 50px auto;
-    border-radius: 2px;
+
+/*button*/
+.button2 {
+    background-color: #dadada;
+    font-family: 'Trebuchet MS', sans-serif;
+  display: inline-block;
+  border-radius: 8px;
+  
+  border: none;
+  color: black;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  width: 80%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 30px 0px 0 0;
+}
+.button2:hover {
+    background-color: #b9b9b9;
+}
+.button2 span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
 }
 
-.wrapper h2
-{
-    padding: 5px 0;
+.button2 span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button2:hover span {
+  padding-right: 25px;
+}
+
+.button2:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+/*button ends-------------------------------------------------------------*/
+/* bottom starts------------------*/
+
+.weather-forecast{
+    position: fixed;
+    bottom: 0;
+    width: 99%;
+    height: 35%;
+    margin: 0 10px 10px 5px;
+    padding: 0 0 0 0;
+    display: flex;
     text-align: center;
+    justify-content: center;
     background: rgba(24,24,27,0.6);
-    border-radius: 25px;
+    border-radius: 5px;
+    
+}
+
+.weather-forecast-item{
+    margin: 20px 7px 0 0;
+    height: 80%;
+    width: 18.5%;
+    font-family: 'Trebuchet MS', sans-serif;
+    background: #363636;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 5px;
+    border: none;
     color: white;
-    font-family: sans-serif;
+    background-color: transparent;
+    border: 2px solid #ffffff;
+    border-radius: 8px;
+    text-align: center;
 }
-.wrapper p
-{
-    margin:20px 50px;
-    margin-right: 20px;
+.day{
+    margin-left: 14%;
+    font-size: 22px;
+    background-color: rgba(0, 255, 255, 0.5);
+    border-radius: 5px;
+    width: 70%;
+}
+.newhead{
+    font-family: 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 22px;
+    padding: 5px;
+    border: none;
+    color: white;
+    text-align: center;
+    
+}
+.weather-forecast-item1{
+    margin: 6px 0px 0 0px;
+    padding-left: 15%;
+    width: 40%;
+    font-family: 'Trebuchet MS', sans-serif;
+    
+    background-color: rgba(0, 255, 255, 0.5);
+    font-weight: bold;
+    font-size: 14px;
+    
+    
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+    
+   
     text-align: left;
-    color: #04214c;
-    font-size:23px;
 }
-.wrapper h2 span
-{
-    font-size: 26px;
-    color: #9beefb;
+.others{
+    margin-top: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    padding-left: 5px;
+    color: white;
+    font-family: 'Trebuchet MS', sans-serif;
+    
+    padding-left: 15%;
+    width: 60%;
 }
-.wrapper p span
-{
-    color: #f4780d;
-    font-size: 25px;
+
+.presentd{
+    border-radius: 5px;
+    height: 90px;
+    width: 60%;
+    margin-left: 7px;
+    display: flex;
+    background: rgba(24,24,27,0.6);
 }
-*/
+}
+
+
+
+
+
+}
+
+
