--- a/weathercs.css
+++ b/weathercs.css
@@ -18,7 +18,7 @@ body
 
 /*--------------------------------------*/
 
-@media (max-width: 768px) {
+@media (min-width: 480px) and (max-width: 768px) {
 
     .topcont{
     display: flex;
@@ -373,6 +373,225 @@ body
     margin: 20px 7px 0 0;
     height: 80%;
     width: 18.5%;
+    font-family: 'Trebuchet MS', sans-serif;
+    background: #363636;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 5px;
+    border: none;
+    color: white;
+    background-color: transparent;
+    border: 2px solid #ffffff;
+    border-radius: 8px;
+    text-align: center;
+}
+.day{
+    margin-left: 14%;
+    font-size: 22px;
+    background-color: rgba(0, 255, 255, 0.5);
+    border-radius: 5px;
+    width: 70%;
+}
+.newhead{
+    font-family: 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 22px;
+    padding: 5px;
+    border: none;
+    color: white;
+    text-align: center;
+    
+}
+.weather-forecast-item1{
+    margin: 6px 0px 0 0px;
+    padding-left: 15%;
+    width: 40%;
+    font-family: 'Trebuchet MS', sans-serif;
+    
+    background-color: rgba(0, 255, 255, 0.5);
+    font-weight: bold;
+    font-size: 14px;
+    
+    
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+    
+   
+    text-align: left;
+}
+.others{
+    margin-top: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    padding-left: 5px;
+    color: white;
+    font-family: 'Trebuchet MS', sans-serif;
+    
+    padding-left: 15%;
+    width: 60%;
+}
+
+.presentd{
+    border-radius: 5px;
+    height: 90px;
+    width: 60%;
+    margin-left: 7px;
+    display: flex;
+    background: rgba(24,24,27,0.6);
+}
+}
+
+
+
+
+
+}
+
+
+@media (max-width: 480px){
+
+    .topcont{
+    display: flex;
+}
+
+.tadcont{
+    width: 30%;
+    font-family: 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    color: white;
+    margin: 30px 0 0 30px;
+}
+
+
+    .container-fluid1 
+{
+    width: 35%;
+    position: right;
+    margin-left: auto; 
+    margin-right: 0;
+    margin-top: 30px;
+    margin-right: 10px;
+
+}
+
+.inputs 
+{
+    padding: 2rem 0 2rem 0;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    background: rgba(24,24,27,0.6);
+    border-radius: 10px;
+}
+.inputs input[type="text"] 
+{
+    height: 4rem;
+    width: 80%;
+    font-family: 'Trebuchet MS', sans-serif;
+    background: #212121;
+    font-weight: bold;
+    font-size: 14px;
+    padding: 10px;
+    border: none;
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+    border: 2px solid #c2c2c2;
+    border-radius: 2px;
+    
+}
+
+#cityinput::placeholder {
+    font-size: 14px;
+    color: rgb(255, 255, 255);
+  }
+
+.inputs input[type="submit"] 
+{
+  background-color: #dadada;
+  font-family: 'Trebuchet MS', sans-serif;
+  display: inline-block;
+  border-radius: 8px;
+  border: none;
+  color: black;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px;
+  width: 80%;
+  transition: all 0.5s;
+  cursor: pointer;
+  
+}
+.inputs input[type="submit"]:hover {
+    background-color: #b9b9b9;
+}
+
+/*button*/
+.button2 {
+    background-color: #dadada;
+    font-family: 'Trebuchet MS', sans-serif;
+  display: inline-block;
+  border-radius: 8px;
+  
+  border: none;
+  color: black;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  width: 80%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 30px 0px 0 0;
+}
+.button2:hover {
+    background-color: #b9b9b9;
+}
+.button2 span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button2 span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button2:hover span {
+  padding-right: 25px;
+}
+
+.button2:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+/*button ends-------------------------------------------------------------*/
+/* bottom starts------------------*/
+
+.weather-forecast{
+    position: fixed;
+    bottom: 0;
+    width: 98%;
+    height: 35%;
+    margin: 0 10px 10px 5px;
+    padding: 0 0 0 0;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    background: rgba(24,24,27,0.6);
+    border-radius: 5px;
+    display: flex;
+    overflow-y: scroll;
+}
+
+.weather-forecast-item{
+    margin: 20px 7px 0 0;
+    height: 80%;
+    width: 80%;
     font-family: 'Trebuchet MS', sans-serif;
     background: #363636;
     font-weight: bold;
