--- a/weathercs.css
+++ b/weathercs.css
@@ -226,6 +226,8 @@ body
     margin-left: 7px;
     display: flex;
     background: rgba(24,24,27,0.6);
+    overflow-y: scroll;
+    overflow-x: scroll;
 }
 }
 
@@ -437,6 +439,8 @@ body
     margin-left: 7px;
     display: flex;
     background: rgba(24,24,27,0.6);
+    overflow-y: auto;
+    overflow-x: auto;
 }
 }
 
@@ -450,7 +454,7 @@ body
 .tadcont{
     width: 30%;
     font-family: 'Trebuchet MS', sans-serif;
-    font-size: 30px;
+    font-size: 35px;
     color: white;
     margin: 30px 0 0 30px;
 }
@@ -528,7 +532,7 @@ body
   border: none;
   color: black;
   text-align: center;
-  font-size: 20px;
+  font-size: 17px;
   padding: 10px;
   width: 80%;
   transition: all 0.5s;
@@ -572,12 +576,12 @@ body
     height: 35%;
     margin: 0 10px 10px 5px;
     padding: 0 0 0 0;
-    display: flex;
+    
     text-align: center;
     justify-content: center;
     background: rgba(24,24,27,0.6);
     border-radius: 5px;
-    display: flex;
+    
     overflow-y: scroll;
 }
 
@@ -650,6 +654,8 @@ body
     margin-left: 7px;
     display: flex;
     background: rgba(24,24,27,0.6);
+    overflow-y: scroll;
+    overflow-x: scroll;
 }
 }
 
