--- a/weathercs.css
+++ b/weathercs.css
@@ -583,6 +583,7 @@ body
     border-radius: 5px;
     
     overflow-y: scroll;
+    overflow-x: scroll;
 }
 
 .weather-forecast-item{
@@ -649,7 +650,7 @@ body
 
 .presentd{
     border-radius: 5px;
-    height: 90px;
+    height: 130px;
     width: 60%;
     margin-left: 7px;
     display: flex;
