--- a/weathercs.css
+++ b/weathercs.css
@@ -8,12 +8,14 @@ body
     background-image: url("back.jpg"); 
     background-size: 100% 700px;
     background-repeat: no-repeat;
+    
 }
 
 .fullcont{
     display: flex;
     flex-direction: column;
     height: 100%;
+    
 }
 
 /*--------------------------------------*/
@@ -164,7 +166,7 @@ body
     font-family: 'Trebuchet MS', sans-serif;
     background: #363636;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 2.4vw;
     padding: 5px;
     border: none;
     color: white;
@@ -226,226 +228,12 @@ body
     margin-left: 7px;
     display: flex;
     background: rgba(24,24,27,0.6);
-    overflow-y: scroll;
-    overflow-x: scroll;
-}
-}
-
-@media only screen and (max-width: 768px) {
-
-    .topcont{
-    display: flex;
-}
-
-.tadcont{
-    width: 30%;
-    font-family: 'Trebuchet MS', sans-serif;
-    font-size: 45px;
-    color: white;
-    margin: 30px 0 0 30px;
-}
-
-
-    .container-fluid1 
-{
-    width: 35%;
-    position: right;
-    margin-left: auto; 
-    margin-right: 0;
-    margin-top: 30px;
-    margin-right: 10px;
-
-}
-
-.inputs 
-{
-    padding: 2rem 0 2rem 0;
-    width: 100%;
-    text-align: center;
-    justify-content: center;
-    background: rgba(24,24,27,0.6);
-    border-radius: 25px;
-}
-.inputs input[type="text"] 
-{
-    height: 4rem;
-    width: 80%;
-    font-family: 'Trebuchet MS', sans-serif;
-    background: #212121;
-    font-weight: bold;
-    font-size: 1rem;
-    padding: 10px;
-    border: none;
-    color: white;
-    background-color: transparent;
-    border: 2px solid #c2c2c2;
-    border-radius: 2px;
-    
-}
-
-#cityinput::placeholder {
-    font-size: 15px;
-    color: rgb(228, 228, 228);
-  }
-
-.inputs input[type="submit"] 
-{
-  background-color: #dadada;
-  font-family: 'Trebuchet MS', sans-serif;
-  display: inline-block;
-  border-radius: 8px;
-  border: none;
-  color: black;
-  text-align: center;
-  font-size: 18px;
-  padding: 10px;
-  width: 80%;
-  transition: all 0.5s;
-  cursor: pointer;
-  
-}
-.inputs input[type="submit"]:hover {
-    background-color: #b9b9b9;
-}
-
-/*button*/
-.button2 {
-    background-color: #dadada;
-    font-family: 'Trebuchet MS', sans-serif;
-  display: inline-block;
-  border-radius: 8px;
-  
-  border: none;
-  color: black;
-  text-align: center;
-  font-size: 18px;
-  padding: 10px;
-  width: 80%;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 30px 0px 0 0;
-}
-.button2:hover {
-    background-color: #b9b9b9;
-}
-.button2 span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-.button2 span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-.button2:hover span {
-  padding-right: 25px;
-}
-
-.button2:hover span:after {
-  opacity: 1;
-  right: 0;
-}
-/*button ends-------------------------------------------------------------*/
-/* bottom starts------------------*/
-
-.weather-forecast{
-    position: fixed;
-    bottom: 0;
-    width: 98%;
-    height: 35%;
-    margin: 0 10px 10px 7px;
-    padding: 0 0 0 0;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    background: rgba(24,24,27,0.6);
-    border-radius: 5px;
-    
-}
-
-.weather-forecast-item{
-    margin: 20px 7px 0 0;
-    height: 80%;
-    width: 18.5%;
-    font-family: 'Trebuchet MS', sans-serif;
-    background: #363636;
-    font-weight: bold;
-    font-size: 16px;
-    padding: 5px;
-    border: none;
-    color: white;
-    background-color: transparent;
-    border: 2px solid #ffffff;
-    border-radius: 8px;
-    text-align: center;
-}
-.day{
-    margin-left: 15px;
-    font-size: 22px;
-    background-color: rgba(0, 255, 255, 0.5);
-    border-radius: 5px;
-    width: 70%;
-}
-.newhead{
-    font-family: 'Trebuchet MS', sans-serif;
-    font-weight: bold;
-    font-size: 22px;
-    padding: 5px;
-    border: none;
-    color: white;
-    text-align: center;
-    
-}
-.weather-forecast-item1{
-    margin: 6px 0px 0 0px;
-    padding-left: 10px;
-    width: 40%;
-    font-family: 'Trebuchet MS', sans-serif;
-    
-    background-color: rgba(0, 255, 255, 0.5);
-    font-weight: bold;
-    font-size: 14px;
-    
-    
-    color: rgb(255, 255, 255);
-    background-color: transparent;
-    
-   
-    text-align: left;
-}
-.others{
-    margin-top: 20px;
-    font-size: 15px;
-    font-weight: bold;
-    padding-left: 5px;
-    color: white;
-    font-family: 'Trebuchet MS', sans-serif;
-    
-    margin-left: 5px;
-    width: 60%;
-}
-
-.presentd{
-    border-radius: 5px;
-    height: 90px;
-    width: 60%;
-    margin-left: 7px;
-    display: flex;
-    background: rgba(24,24,27,0.6);
     overflow-y: auto;
     overflow-x: auto;
 }
 }
 
-
-@media only screen and (max-width: 480px){
+@media only screen and (max-width: 768px){
 
     .topcont{
     display: flex;
@@ -532,7 +320,7 @@ body
   border: none;
   color: black;
   text-align: center;
-  font-size: 17px;
+  font-size: 16px;
   padding: 10px;
   width: 80%;
   transition: all 0.5s;
@@ -581,19 +369,18 @@ body
     justify-content: center;
     background: rgba(24,24,27,0.6);
     border-radius: 5px;
+    overflow-y: auto;
     
-    overflow-y: scroll;
-    overflow-x: scroll;
 }
 
 .weather-forecast-item{
-    margin: 20px 7px 0 0;
+    margin: 20px 7px 0 15%;
     height: 80%;
-    width: 80%;
+    width: 70%;
     font-family: 'Trebuchet MS', sans-serif;
     background: #363636;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 4vw;
     padding: 5px;
     border: none;
     color: white;
@@ -620,14 +407,14 @@ body
     
 }
 .weather-forecast-item1{
-    margin: 6px 0px 0 0px;
+    margin: 0px 0px 0 0px;
     padding-left: 15%;
     width: 40%;
     font-family: 'Trebuchet MS', sans-serif;
     
     background-color: rgba(0, 255, 255, 0.5);
     font-weight: bold;
-    font-size: 14px;
+    font-size: 2.2vw;
     
     
     color: rgb(255, 255, 255);
@@ -637,8 +424,8 @@ body
     text-align: left;
 }
 .others{
-    margin-top: 20px;
-    font-size: 15px;
+    margin-top: 15px;
+    font-size: 2.2vw;
     font-weight: bold;
     padding-left: 5px;
     color: white;
@@ -650,13 +437,13 @@ body
 
 .presentd{
     border-radius: 5px;
-    height: 130px;
+    height: 110px;
     width: 60%;
     margin-left: 7px;
     display: flex;
     background: rgba(24,24,27,0.6);
-    overflow-y: scroll;
-    overflow-x: scroll;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 }
 
