--- a/weathercs.css
+++ b/weathercs.css
@@ -166,7 +166,7 @@ body
     font-family: 'Trebuchet MS', sans-serif;
     background: #363636;
     font-weight: bold;
-    font-size: 2.4vw;
+    font-size: 16px;
     padding: 5px;
     border: none;
     color: white;
@@ -380,7 +380,7 @@ body
     font-family: 'Trebuchet MS', sans-serif;
     background: #363636;
     font-weight: bold;
-    font-size: 4.6vw;
+    font-size: 25px;
     padding: 5px;
     border: none;
     color: white;
@@ -414,7 +414,7 @@ body
     
     background-color: rgba(0, 255, 255, 0.5);
     font-weight: bold;
-    font-size: 2.6vw;
+    font-size: 15px;
     
     
     color: rgb(255, 255, 255);
@@ -425,7 +425,7 @@ body
 }
 .others{
     margin-top: 15px;
-    font-size: 2.6vw;
+    font-size: 15px;
     font-weight: bold;
     padding-left: 5px;
     color: white;
